# Cuby

Key/: signature.jks
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: ids.xml  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
macroengine/: CMakeLists.txt  build
macroengine-game/: CMakeLists.txt  build
macroengine-game/game/: CMakeLists.txt  main.cpp
macroengine-game/game/entities/: entities.hpp
macroengine-game/game/entities/Game/: Game.cpp  Game.hpp
macroengine-game/game/entities/MapFactory/: MapFactory.cpp  MapFactory.hpp
macroengine-game/game/entities/MapLevel/: MapLevel.cpp  MapLevel.hpp
macroengine-game/game/entities/MenuController/: MenuController.cpp  MenuController.hpp
macroengine-game/game/entities/Player/: Player.cpp  Player.hpp
macroengine-game/game/entities/PlayerFactory/: PlayerFactory.cpp  PlayerFactory.hpp
macroengine-game/resources/map/: map1.ini  map2.ini
macroengine-game/resources_core/: config.ini  strings.ini
macroengine-game/resources_core/animation/: test.ini  test2.ini
macroengine-game/resources_core/rpg/maps/: map_test.ini
macroengine-game/resources_core/strings/: custom_location_strings.ini
macroengine-game/resources_core/text/: courier.ini
macroengine/doc/: doc.conf
macroengine/macroengine-core/: CMakeLists.txt  FindSFML.cmake  macroengine-core.hpp  strings.ini
macroengine/macroengine-core/Object/: Object.cpp  Object.hpp
macroengine/macroengine-core/build_utl/: CMakeLists.txt  build_utl.hpp
macroengine/macroengine-core/build_utl/build_tool/: CMakeLists.txt  main.cpp
macroengine/macroengine-core/build_utl/build_tool/BuildTool/: BuildTool.cpp  BuildTool.hpp
macroengine/macroengine-core/build_utl/build_tool/commands/: commands.hpp
macroengine/macroengine-core/build_utl/build_tool/commands/BuildDirectory/: BuildDirectory.cpp  BuildDirectory.hpp
macroengine/macroengine-core/build_utl/build_tool/commands/Clean/: Clean.cpp  Clean.hpp
macroengine/macroengine-core/build_utl/build_tool/commands/Help/: Help.cpp  Help.hpp
macroengine/macroengine-core/build_utl/build_tool/commands/Install/: Install.cpp  Install.hpp
macroengine/macroengine-core/build_utl/build_tool/commands/InstallDirectory/: InstallDirectory.cpp  InstallDirectory.hpp
macroengine/macroengine-core/build_utl/strings_finder/: CMakeLists.txt  main.cpp
macroengine/macroengine-core/build_utl/strings_finder/StringsFinder/: StringsFinder.cpp  StringsFinder.hpp
macroengine/macroengine-core/clock/Clock/: Clock.cpp  Clock.hpp
macroengine/macroengine-core/clock/Time/: Time.cpp  Time.hpp
macroengine/macroengine-core/configuration/: configuration.hpp
macroengine/macroengine-core/configuration/Configuration/: Configuration.cpp  Configuration.hpp
macroengine/macroengine-core/configuration/EntityIDGenerator/: EntityIDGenerator.cpp  EntityIDGenerator.hpp
macroengine/macroengine-core/configuration/EntityRegister/: EntityRegister.cpp  EntityRegister.hpp
macroengine/macroengine-core/configuration/Environment/: Environment.cpp  Environment.hpp
macroengine/macroengine-core/configuration/macros/: macros_callable.hpp  macros_configuration.hpp
macroengine/macroengine-core/doc/: examples.hpp  namespaces.hpp
macroengine/macroengine-core/exception/: exception.hpp  exception_name_changer.sh
macroengine/macroengine-core/log/: log.hpp
macroengine/macroengine-core/utl/: configuration.hpp  definitions.hpp  exceptions.hpp  strings.hpp  types.hpp
macroengine/macroengine-rpg/: CMakeLists.txt  macroengine-rpg.hpp  strings.ini
macroengine/macroengine-rpg/character/: character.hpp
macroengine/macroengine-rpg/character/Character/: Character.cpp  Character.hpp
macroengine/macroengine-rpg/character/Player/: Player.cpp  Player.hpp
macroengine/macroengine-rpg/character/utl/CharacterStatistics/: CharacterStatistics.cpp  CharacterStatistics.hpp
macroengine/macroengine-rpg/character/utl/PlayerParameters/: PlayerParameters.cpp  PlayerParameters.hpp
macroengine/macroengine-rpg/character/utl/enum/: e_player_keys.hpp
macroengine/macroengine-rpg/map/: map.hpp
macroengine/macroengine-rpg/map/Cell/: Cell.cpp  Cell.hpp
macroengine/macroengine-rpg/map/CellData/: CellData.cpp  CellData.hpp
macroengine/macroengine-rpg/map/Map/: Map.cpp  Map.hpp
macroengine/macroengine-rpg/utl/: rpg_types.hpp
macroengine/macroengine-rpg/utl/macros/: macros_definitions.hpp
macroengine/templates/view/: build.sh  view.cpp
macroengine/tests/: CMakeLists.txt
macroengine/tests/configuration/strings/StringBuilder/: TestStringBuilder.cpp  TestStringBuilderStringFile.cpp
macroengine/tests/entity/inheritance/: TestEntityInheritance.cpp
macroengine/tests/file/File/: TestFile.cpp
macroengine/tests/parser/ini/IniParser/: TestIniParser.cpp  test_fail1.ini  test_fail2.ini  test_fail3.ini  test_multiline.ini  test_multiline_fail.ini  test_regular.ini
macroengine/tests/parser/ini/IniScope/: TestIniScope.cpp
macroengine/tests/resources/: strings.ini
macroengine/tests/utl/BitMask/: TestBitMask.cpp
zoblock/: install.sh
zoblock/src/: Makefile  zobdisp.c  zoblock
(+217 files in other folders)
